# cream-browser

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  CNAME  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  build.sh  check-dep.sh  cmake_install.cmake  cmake_uninstall.cmake.in  common.mk.in  config.h.in  config.sample  configure  configure.ac  configure.in  cream-browser_build.h.in  index.html  project.conf  style.css  style.scss
blog/: index.html  rss2.xml
blog/generate/: bot.in  plstblog.conf  top.idx.in  top.in
blog/generate/post/: 00.Welcome on the Cream-Browser's blog.markdown  01.Cream-Browser with DirectFB support.markdown  02.RSS Feeds for Cream-Browser's blog.markdown  03.Gettext support.markdown  04.Split your browser as you split your Vim.markdown  05.Keybindings are available.markdown  06.GTK2 not supported anymore.mardown  07.CSS Theming.markdown
blog/post/: 00.html  01.html  02.html  03.html  04.html  05.html  06.html  07.html
doc/: CMakeLists.txt  Doxyfile  Makefile  documentation.css  footer.html  header.html  layout.xml
docs/cream-browser/: Cream-Browser_8h_source.html  GtkVimSplit_8h_source.html  Inputbox_8h_source.html  NotebookTabLabel_8h_source.html  Notebook_8h_source.html  Statusbar_8h_source.html  WebView_8h_source.html  annotated.html  cache_8h_source.html  classCreamBrowser.html  classCreamModule.html  classCreamModuleDummy.html  classCreamModuleDummy__inherit__graph.md5  classCreamModuleWebKit.html  classCreamModuleWebKit__inherit__graph.map  classCreamModuleWebKit__inherit__graph.md5  classCreamModule__inherit__graph.map  classCreamModule__inherit__graph.md5  classGtkVimSplit.html  classInputbox.html  classNotebook.html  classNotebookTabLabel.html  classSocket.html  classStatusbar.html  classTheme.html  classWebView.html  classes.html  dummy_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  group__bit.html  group__bit.md5  group__cb-members.html  group__cb-members.md5  group__cb-vfuncs.html  group__cb-vfuncs.md5  group__cb-vfuncs_ga0c98edc0d25516eec019add1ed2e0074_cgraph.map  (+306 more)
docs/cream-browser/search/: all_63.html  all_67.html  all_69.html  all_6d.html  all_6e.html  all_6f.html  all_73.html  all_75.html  all_77.html  classes_63.html  classes_67.html  classes_69.html  classes_6b.html  classes_6c.html  classes_6e.html  classes_73.html  classes_74.html  classes_75.html  classes_77.html  functions_63.html  functions_67.html  functions_69.html  functions_6e.html  functions_73.html  functions_77.html  search.js  variables_63.html  variables_64.html  variables_66.html  variables_68.html  variables_6e.html  variables_70.html  variables_71.html  variables_73.html  variables_75.html
docs/lua/: index.html
docs/lua/modules/: cream.bit.html  cream.clipboard.html  cream.commands.html  cream.html  cream.inputbox.html  cream.keys.html  cream.regex.html  cream.statusbar.html  cream.tab.html  cream.theme.html  (+2 more)
example/: rc.lua  theme.css  theme.lua
mk/: gen-includelinks.pl  gen-includes.pl  manlinks.pl  mkconcurrent.pl
po/: CMakeLists.txt  Makefile  Makevars  POTFILES.in  fr.mo  fr.po  messages.pot
scripts/: session.sh
src/: CMakeLists.txt  Cream-Browser.c  Cream-Browser.h  CreamHook.c  CreamHook.h  CreamPlugin.c  CreamPlugin.h  CreamTabClass.c  CreamTabClass.h  GtkVimSplit.c  GtkVimSplit.h  Inputbox.c  Inputbox.h  Makefile  Makefile.am  Makefile.in  Notebook.c  Notebook.h  NotebookClass.c  NotebookClass.h  NotebookTabLabel.c  NotebookTabLabel.h  SplittedWindow.c  SplittedWindow.h  Statusbar.c  Statusbar.h  ViewAreaClass.c  ViewAreaClass.h  WebView.c  WebView.h  WebViewClass.c  WebViewClass.h  cache.c  cache.h  clipboard.c  command.c  config.c  config.h  errors.c  errors.h  (+22 more)
src/core/: .callbacks.c.swp  .callbacks.h.swp  .local.h.swp  .main.c.swp  .structs.h.swp  CMakeLists.txt  Completion.c  Completion.h  CreamTabbed.c  CreamTabbed.h  Makefile  Makefile.am  Makefile.in  bind.c  bind.h  callbacks.c  callbacks.h  command.c  command.h  creamctl.c  gettext.h  handler.c  interface.c  interface.h  local.h  main.c  marshal.c  marshaller.txt  structs.h  xdg.h
src/include/libs/: config.h  errors.h  lua.h  modules.h
src/libs/: CMakeLists.txt  CreamBackwardForwardList.c  CreamBackwardForwardList.h  CreamView.c  CreamView.h  Makefile  Makefile.am  Makefile.in  config.c  errors.c  genmarshal.sh  libcream.c  libcream.h  lua-capi.c  lua.c  marshal.h  marshaller.txt  modules.c
src/libs/CreamView/: CreamBackwardForwardList.c  CreamBackwardForwardList.h  CreamView.c  CreamView.h  Makefile  Makefile.am  Makefile.in
src/libs/config/: Makefile  config.h  libconfig.c  libconfig.h
src/libs/curl/: CurlClient.c  CurlClient.h  CurlModule.c  CurlModule.h  Makefile  Makefile.am  Makefile.in
src/libs/ftp/: CreamFtp.c  CreamFtp.h  FtpClient.c  FtpClient.h  GFtp.c  GFtp.h
src/libs/gopher/: GopherClient.c  GopherClient.h  Makefile  Makefile.am  Makefile.in
src/libs/modules/about/: AboutModule.c  AboutModule.h  Makefile  Makefile.am  Makefile.in
src/libs/modules/ftp/: FTPModule.c  FTPModule.h  Makefile  Makefile.am  Makefile.in
src/libs/modules/vte/: VTEModule.c  VTEModule.h
src/libs/modules/www/: Favicon.c  Favicon.h  Makefile  Makefile.am  Makefile.in  WebViewModule.c  WebViewModule.h  marshal.c  marshal.h
src/lua/: Inputbox.c  Notebook.c  WebView.c  bit.c  clipboard.c  config.lua  history.lua  keybinds.c  module.lua  modules.c  tab.lua  theme.c  theme.h  theme.lua  url.lua  util.c  util.lua  widgets.c  widgets.lua
src/lua/cream/: clipboard.lua  command.lua  init.lua  modules.lua  regex.lua  tab.lua  url.lua  util.lua
src/lua/doc/: bit.lua  clipboard.lua  init.lua  inputbox.lua  keys.lua  regex.lua  statusbar.lua  tab.lua  util.lua
src/lua/lib/cream/: clipboard.lua  init.lua  keys.lua  modules.lua  regex.lua  tab.lua  theme.lua  url.lua  util.lua
src/modules/: api.c  api.h  dummy.c  dummy.h  scheme.c  scheme.h  webkit.c  webkit.h
src/modules/mod-dummy/: CMakeLists.txt  Makefile  common.mk.in  configure  mod-dummy.c  mod-dummy.h  module.mk.in  project.conf
