AM_CPPFLAGS = -DLOCALEDIR=\"$(localedir)\" -I$(top_srcdir)/src/core -I$(top_srcdir)/src/libs -I$(top_srcdir)/src/libs/modules -I$(top_srcdir)/src/libs/curl
DEFS = -DPREFIX=\"$(prefix)\"

lib_LIBRARIES = libcream-module-ftp.a
libcream_module_ftp_a_SOURCES = FTPModule.c
libcream_module_ftp_a_SOURCES += FTPModule.h
