AM_CPPFLAGS = -DLOCALEDIR=\"$(localedir)\" -I$(top_srcdir)/src/core -I$(top_srcdir)/src/libs -I$(top_srcdir)/src/libs/curl
DEFS = -DPREFIX=\"$(prefix)\"

lib_LIBRARIES = libcream-module-webview.a
libcream_module_webview_a_SOURCES = WebViewModule.c Favicon.c
libcream_module_webview_a_SOURCES += WebViewModule.h Favicon.h
